app/assets/stylesheets/surety.less
h2 + table,
h3 + table,
h4 + table,
h2 + .row {
  margin-top: 5px;
}

body {
  padding-top: 5px;
}

#footer {
  border-top: 1px solid #E5E5E5;
  padding-top: 1em;
}

.collapse-header {
  cursor: pointer;
  border-bottom: 1px dashed;
  display: inline-block;
}

.hidden {
  display: none !important;
}

.navbar .brand {
  font-weight: 400;
  position: relative;
  top: -1px;
}

p.name {
  font-size: 16px;
}

div.avatar {
  padding: 10px;
  border: 2px solid #eee;
  text-align: center;
  
  img {
    max-width: 116px;
    height: 116px;
  }
}


#surety {
  margin: 40px;
  width: 600px;
  padding: 30px;
  box-shadow: 0 0 10px #eee;
  position: relative;
  
  .right {
    text-align: right;
  }
  .center {
    text-align: center;
  }
  
  > div {
    padding: 30px 0;
  }
  
  dl {
    padding-left: 40px;
  }
  dt {
    font-weight: normal;
    float: left;
    margin-right: 10px;
  }
  dd {
    margin-left: 40px;
    ul {
      margin: 0;
      clear: both;
    }
  }
  ul {
    list-style: none;
    margin-left: 40px;
  }
  .relative {
    position: relative;
  }
  .stamp {
    position: absolute;
    right: 0;
    text-align: center;
    padding-top: 1em;
  }
  
  .surety-print {
    position: absolute;
    top: 30px;
    left: 30px;
    padding: 0;
    font-size: 72px;
  }
}

blockquote small.reply {
  margin-top: 5px;
  &::before {
    content: '';
  }
}

blockquote.admin {
  font-style: italic;
}

footer {
  margin-top: 40px;
  padding: 40px 0;
}

.link-actions {
  padding: 17px 20px 18px;
  margin-top: 18px;
  margin-bottom: 18px;
  background-color: #f5f5f5;
  *zoom: 1;
  
  .btn {
    padding: 2px 10px;
    font-size: 12px;
  }
}

textarea.code {
  font-family: monospace;
}

li.highlight > a {
  font-weight: bold;
}

#ticket_template {
  margin-left: 160px;
}

span.inline-checkbox {
  label {
    display: inline-block;
    padding: 2px 10px 0 5px;
  }
}

div.toggle-box {
  > div.toggle {
    cursor: pointer;
    padding: 5px 10px;
    display: inline-block;
    background-color: #eee;
    margin-bottom: 5px;
  }
  > div.object {
    display: none;
  }
}

img.preview {
  max-width: 300px;
  max-height: 300px;
}
.alert h5 {
  margin-top: 0;
}

.relative {
  position: relative;
}

#help {
  position: absolute;
  top: 0;
  right: 0;
  z-index: 100;
  width: 220px;
  ul {
    margin: 0;
  }
}

.group:before, .group:after {
  content: "";
  display: table;
}
.group:after {
  clear: both;
}

.remove-form-item {
  label.control-label {
    float: none !important;
    display: inline-block;
    text-align: left !important;
    position: relative;
    top: -4px;
  }
  div.control-group {
    margin-bottom: 0px !important;
    position: relative;
    top: -15px;
  }
  div.controls {
    float: left;
  }
}

a.danger {
  color: #DA4F49;
}

.state-closed {
  color: gray;
}

li {
  .actions {
    padding-left: 16px;
  }
}

div.scan {
  margin-bottom: 20px;
}

div.soul-box {
  padding: 10px 0;
  text-align: center;
  a {
    &:before {
      content: "> ";
    }
    &:after {
      content: " <";
    }
  }
}

.alert .form-actions {
  background: none;
}

.select-all {
  display: block;
  font-size: 12px;
}


.nav-tabs {
  border-bottom: 2px solid #aaa;
}

.nav-tabs > li {
  margin-bottom: -2px;
}

.nav-tabs > li > a {
  border: 2px solid transparent;
}

.nav-tabs > li > a:hover {
  border-color: #eeeeee #eeeeee #aaaaaa;
}

.nav-tabs > .active > a,
.nav-tabs > .active > a:hover {
  border: 2px solid #aaa;
  border-bottom-color: transparent;
}

td.date {
  white-space: nowrap;
}

.remove-member {
  font-size: 20px;
  position: relative;
  top: 2px;
  font-weight: bold;
  left: 5px;
  &:hover {
    color: red;
    text-decoration: none;
  }
}

.report-form {
  .control-label {
    width: 190px;
  }
  .controls {
    margin-left: 210px;
  }
  .no-extra-margin {
    .control-label {
      width: 140px;
    }
    .controls {
      margin-left: 160px;
    }
  }
  .nocontrol {
    padding-left: 190px;
    .controls {
      margin-left: 0;
    }
  }
}

#top-menu {
  .dropdown {
    display: none;
  }
}

.wrap-inline {
  margin: 0 !important;
  .controls {
    margin: 0 !important;
  }
  div {
    display: inline;
  }
}

table.table td table.table:last-child { margin-bottom: 0; }

#print-me {
  display: none;
}

form.alert {
  .form-actions {
    margin-bottom: 0;
  }
}

#left-menu {
  top: 10px;
}

#directions_of_science_count_by_msu_subdivistions_bar {
  width: 2000px;
  overflow-x: scroll;
}

.accordion-inner {
  overflow-x: auto;
}

legend abbr {
  margin: 0 3px;
}

.well >:first-child {
  margin-top: 0;
}
.well >:last-child {
  margin-bottom: 0;
}

.tini-form {
  select, input {
    font-size: 12px;
  }
  select {
    height: 20px;
    margin: 5px 0;
  }
}

.inline-check-boxes .controls label {
  display: inline-block;
  margin-right: 20px;
}

code.public-key {
  max-width: 460px;
  overflow-x: auto;
  display: inline-block;
  cursor: pointer;
}

a.big-close {
  font-size: 18px;
  font-weight: bold;
}

small .label, .badge {
  font-size: 10px;
  padding: 1px 2px;
}

.well-collapseble {
  padding-bottom: 0;
  
  .well-close {
    background: #e3e3e3;
    width: 940px;
    position: relative;
    left: -20px;
    bottom: -1px;
    -webkit-border-bottom-right-radius: 4px;
    -webkit-border-bottom-left-radius: 4px;
    -moz-border-radius-bottomright: 4px;
    -moz-border-radius-bottomleft: 4px;
    border-bottom-right-radius: 4px;
    border-bottom-left-radius: 4px;
    cursor: pointer;
    line-height: 12px;
    padding-bottom: 1px;
    text-align: center;
    color: #999;
    
    &:hover {
      background: #aaa;
      color: white;
    }
  }
}

.well-collapsed {
  .well-body {
    display: none;
  }
}

.controls h6:first-child {
  margin-top: 6px;
}

.without-top-border {
  td {
    border-top: none;
  }
}

.center {
  text-align: center !important;
}

a.printable:not(.btn) {
  border-bottom: 1px dashed;
  
  &:hover {
    text-decoration: none;
  }
}

.deliver-surety {
  font-size: 18px;
  line-height: 35px;
  
  .step {
    margin-bottom: 5px;
  }
  
  .step-content {
    margin-left: 38px;
  }
  
  i {
    font-size: 26px;
    line-height: 35px;
    float: left;
    position: relative;
    top: 2px;
  }
}

.filling-surety {
  padding-left: 15px;
  border-left: 5px solid #eee;
  
  label {
    font-size: 13px;
    margin-bottom: 0;
  }
  
  h4 {
    font-size: 18px;
    font-weight: bold;
  }
  
  input.string {
    font-size: 12px;
    padding: 2px 3px;
  }
  input.string, select {
    margin-bottom: 0;
  }
  
  h5 {
    margin-bottom: 0px;
  }
  
  ul {
    margin: 0 0 10px 10px;
  }
  
  li {
    font-size: 13px;
    list-style: none;
    
    &:before {
      content: '–';
      margin-right: 5px;
    }
  }
}

i.status-icon {
  width: 14px;
  display: inline-block;
}

tr.striped {
  background: #f9f9f9;
}


form.form-inline {
  .field_with_errors {
    display: inline-block;
  }
}

table.vtop {
  td, th {
    vertical-align: top;
  }
}


.control-group.limited-height .controls {
  max-height: 200px;
  overflow-y: scroll;
}

.control-group.limited-height .controls::-webkit-scrollbar {
  -webkit-appearance: none;
  width: 8px;
}

.control-group.limited-height .controls::-webkit-scrollbar-track {
  background-color: #eee;
  border-radius: 8px;
}
.control-group.limited-height .controls::-webkit-scrollbar-thumb {
    border-radius: 8px;
    background-color: #666;
}

.filter {
  background: #eee;
  padding: 10px;
  border-radius: 5px;
  margin-top: -30px;
}
.filter-item {
  width: 220px;
  float: left;
  margin-left: 10px;
  .control-group {
    margin-bottom: 0;
  }
  &:first-child {
    margin-left: 0;
  }
}
.filter-item select, .select2-container {
  font-size: 12px;
  width: 220px;
  margin-bottom: 0;
}
.filter-item option {
  padding: 0;
}

.log {
  max-height: 300px;
}
.log code {
  white-space: pre;
}

